fix: fix button size on small devices

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -112,3 +112,18 @@
     line-height: 1.3rem;
   }
 }
+
+@media screen and (max-width: 360px) {
+  .button {
+    padding: 0.6rem 0.7em;
+  }
+  .text_small {
+    font-size: 0.7rem;
+    line-height: 0.8rem;
+  }
+
+  .text_big {
+    font-size: 0.9rem;
+    line-height: 1.1rem;
+  }
+}
